feita a configuração do Spring Security com login e senha na memoria, sendo index > login > dashboard

--- a/Veiculos/src/main/resources/templates/index.html
+++ b/Veiculos/src/main/resources/templates/index.html
@@ -2,12 +2,28 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	  xmlns:th="http://www.thymeleaf.org">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" charset="UTF-8"/>
+
+     <!--Import Google Icon Font-->
+     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+     <!--Import materialize.css-->
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
+     
 <title>Tela Inicial</title>
 </head>
 <body>
-
-	<h1>Hello Veiculos !</h1>
+	<!-- Navbar -->
+	<nav>
+		<div class="nav-wrapper">
+			<a href="#" class="brand-logo center">Projeto Veículos</a>
+			<ul id="nav-mobile" class="left hide-on-med-and-down">
+				<li><a class="btn waves-effect waves-light" href="/login">Acesso</a></li>
+				<li><a href="">Não Implementado</a></li>
+				<li><a href="">Não Implementado</a></li>
+			</ul>
+		</div>
+	</nav>
+	<!-- Fim do Navbar -->
 
 </body>
 </html>
