Feito tela de cadastro e função de cadastrar veiculos Feito tela de listar veiculos e função de listar veiculos

--- a/Veiculos/src/main/resources/templates/dashboard.html
+++ b/Veiculos/src/main/resources/templates/dashboard.html
@@ -23,8 +23,6 @@
 			<a href="#" class="brand-logo center">DashBoard</a>
 			<ul id="nav-mobile" class="left hide-on-med-and-down">
 				<li><a class='dropdown-trigger' data-target='dropdown1' href="#"> Menu</a></li>
-				<li><a href="">Não Implementado</a></li>
-				<li><a href="">Não Implementado</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -35,7 +33,7 @@
 	<ul id="dropdown1" class="dropdown-content">
 		<li><a href="#!">Usuários</a></li>
 		<li class="divider"></li>
-		<li><a href="#!">Veículos</a></li>
+		<li><a href="/veiculo">Veículos</a></li>
 		<li class="divider"></li>
 		<li><a href="#!">Condutores</a></li>
 	</ul>
