Implementado login com JPA no Spring Security e Regras de acesso(ROLES)

--- a/Veiculos/src/main/resources/templates/dashboard.html
+++ b/Veiculos/src/main/resources/templates/dashboard.html
@@ -24,6 +24,9 @@
 			<ul id="nav-mobile" class="left hide-on-med-and-down">
 				<li><a class='dropdown-trigger' data-target='dropdown1' href="#"> Menu</a></li>
 			</ul>
+			<ul id="nav-mobile" class="right hide-on-med-and-down">
+				<li><a class="btn waves-effect waves-light" href="/serviço">Serviço</a></li>
+			</ul>
 		</div>
 	</nav>
 	<!-- Fim do Navbar -->
@@ -31,11 +34,11 @@
 
 	<!-- Dropdown Structure -->
 	<ul id="dropdown1" class="dropdown-content">
-		<li><a href="#!">Usuários</a></li>
+		<li><a href="/usuario">Usuários</a></li>
 		<li class="divider"></li>
 		<li><a href="/veiculo">Veículos</a></li>
 		<li class="divider"></li>
-		<li><a href="#!">Condutores</a></li>
+		<li><a href="/condutores">Condutores</a></li>
 	</ul>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
