--- a/Veiculos/src/main/resources/templates/veiculo/veiculo.html
+++ b/Veiculos/src/main/resources/templates/veiculo/veiculo.html
@@ -32,11 +32,11 @@ brand-logo center">Veículos</a>
 
 	<!-- Dropdown Structure -->
 	<ul id="dropdown1" class="dropdown-content">
-		<li><a href="#!">Usuários</a></li>
+		<li><a href="/usuario">Usuários</a></li>
 		<li class="divider"></li>
-		<li><a href="#!">Veículos</a></li>
+		<li><a href="/veiculo">Veículos</a></li>
 		<li class="divider"></li>
-		<li><a href="#!">Condutores</a></li>
+		<li><a href="/condutores">Condutores</a></li>
 	</ul>
 	<!-- Fim do Navbar -->
 
