--- a/Veiculos/src/main/resources/templates/usuarios/usuario.html
+++ b/Veiculos/src/main/resources/templates/usuarios/usuario.html
@@ -10,15 +10,14 @@
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" />
 
-<title>Veiculos</title>
+<title>Usuários</title>
 </head>
 <body>
 
 	<!-- Navbar -->
 	<nav>
 		<div class="nav-wrapper">
-			<a href="#" class="
-brand-logo center">Veículos</a>
+			<a href="#" class="brand-logo center">Usuários</a>
 			<ul id="nav-mobile" class="left hide-on-med-and-down">
 				<li><a href="/dashboard"> Dashboard</a></li>
 				<li><a class='dropdown-trigger' data-target='dropdown1'
@@ -26,7 +25,7 @@ brand-logo center">Veículos</a>
 			</ul>
 			<ul id="nav-mobile" class="right hide-on-med-and-down">
 				<li><a class="btn waves-effect waves-light"
-					href="/cadastroVeiculo">Cadastrar Veículo</a></li>
+					href="/cadastroUsuario">Cadastrar Usuários</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -37,7 +36,7 @@ brand-logo center">Veículos</a>
 		<li class="divider"></li>
 		<li><a href="/veiculo">Veículos</a></li>
 		<li class="divider"></li>
-		<li><a href="/condutores">Condutores</a></li>
+		<li><a href="/motorista">Motoristas</a></li>
 	</ul>
 	<!-- Fim do Navbar -->
 
@@ -46,18 +45,18 @@ brand-logo center">Veículos</a>
 			<table class="striped centered responsive-table container">
 				<thead>
 					<tr>
-						<th>Marca</th>
-						<th>Modelo</th>
-						<th>Ano</th>
-						<th>Registro</th>
+						<th>Login</th>
+						<th>Nome</th>
+						<th>Tipo CNH</th>
+						<th>Validade CNH</th>
 					</tr>
 				</thead>
 				<tbody>
-					<tr th:each="veiculo : ${veiculos}">
-						<td th:text=${veiculo.marca}></td>
-						<td th:text=${veiculo.modelo}></td>
-						<td th:text=${veiculo.ano}></td>
-						<td th:text=${veiculo.registro}></td>
+					<tr th:each="usuario : ${usuarios}">
+						<td th:text=${usuario.login}></td>
+						<td th:text=${usuario.nome}></td>
+						<td th:text=${usuario.tipoCNH}></td>
+						<td th:text=${usuario.ValidadeCNH}></td>
 					</tr>
 				</tbody>
 			</table>
