--- a/Veiculos/src/main/resources/templates/dashboard.html
+++ b/Veiculos/src/main/resources/templates/dashboard.html
@@ -22,6 +22,7 @@
 		<div class="nav-wrapper">
 			<a href="#" class="brand-logo center">DashBoard</a>
 			<ul id="nav-mobile" class="left hide-on-med-and-down">
+				<li><a href="/dashboard"> Dashboard</a></li>
 				<li><a class='dropdown-trigger' data-target='dropdown1' href="#"> Menu</a></li>
 			</ul>
 			<ul id="nav-mobile" class="right hide-on-med-and-down">
@@ -38,7 +39,7 @@
 		<li class="divider"></li>
 		<li><a href="/veiculo">Veículos</a></li>
 		<li class="divider"></li>
-		<li><a href="/condutores">Condutores</a></li>
+		<li><a href="/motorista">Motoristas</a></li>
 	</ul>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
