--- a/Veiculos/src/main/resources/templates/veiculo/veiculo.html
+++ b/Veiculos/src/main/resources/templates/veiculo/veiculo.html
@@ -18,7 +18,7 @@
 	<nav>
 		<div class="nav-wrapper">
 			<a href="#" class="
-brand-logo center">Veículos</a>
+			brand-logo center">Veículos</a>
 			<ul id="nav-mobile" class="left hide-on-med-and-down">
 				<li><a href="/dashboard"> Dashboard</a></li>
 				<li><a class='dropdown-trigger' data-target='dropdown1'
@@ -37,7 +37,7 @@ brand-logo center">Veículos</a>
 		<li class="divider"></li>
 		<li><a href="/veiculo">Veículos</a></li>
 		<li class="divider"></li>
-		<li><a href="/condutores">Condutores</a></li>
+		<li><a href="/motorista">Motoristas</a></li>
 	</ul>
 	<!-- Fim do Navbar -->
 
