--- a/Veiculos/src/main/resources/templates/usuarios/usuario.html
+++ b/Veiculos/src/main/resources/templates/usuarios/usuario.html
@@ -49,6 +49,7 @@
 						<th>Nome</th>
 						<th>Tipo CNH</th>
 						<th>Validade CNH</th>
+						<th>Tipo perfil</th>
 					</tr>
 				</thead>
 				<tbody>
@@ -57,6 +58,13 @@
 						<td th:text=${usuario.nome}></td>
 						<td th:text=${usuario.tipoCNH}></td>
 						<td th:text=${usuario.ValidadeCNH}></td>
+						<td th:each="role : ${usuario.roles}">
+							<th:block th:switch="${role.nomeRole}">
+								<span th:case="'ROLE_ADMIN'">Administrador</span>
+								<span th:case="'ROLE_MOTORISTA'">Motorista</span>
+								<span th:case="'ROLE_GERENTE'">Gerente</span>
+							<th:block>
+						</td>
 					</tr>
 				</tbody>
 			</table>
