--- a/Veiculos/src/main/resources/templates/veiculo/cadastroVeiculo.html
+++ b/Veiculos/src/main/resources/templates/veiculo/cadastroVeiculo.html
@@ -25,11 +25,11 @@
 
 	<!-- Dropdown Structure -->
 	<ul id="dropdown1" class="dropdown-content">
-		<li><a href="#!">Usuários</a></li>
+		<li><a href="/usuario">Usuários</a></li>
 		<li class="divider"></li>
 		<li><a href="/veiculo">Veículos</a></li>
 		<li class="divider"></li>
-		<li><a href="#!">Condutores</a></li>
+		<li><a href="/motorista">Motorista</a></li>
 	</ul>
 
 	<main>
