Feito a tela de cadastro de usuários, porem não está funcionando a função para salvar no banco

--- a/Veiculos/src/main/resources/templates/usuarios/motorista.html
+++ b/Veiculos/src/main/resources/templates/usuarios/motorista.html
@@ -23,6 +23,10 @@
 				<li><a class='dropdown-trigger' data-target='dropdown1'
 					href="#"> Menu</a></li>
 			</ul>
+			<ul id="nav-mobile" class="right hide-on-med-and-down">
+				<li><a class="btn waves-effect waves-light"
+					href="/cadastroMotorista">Cadastrar Motorista</a></li>
+			</ul>
 		</div>
 	</nav>
 
