Modifiquei o modo de salvar cada tipo de usuário

--- a/Veiculos/src/main/resources/templates/dashboard.html
+++ b/Veiculos/src/main/resources/templates/dashboard.html
@@ -35,11 +35,11 @@
 
 	<!-- Dropdown Structure -->
 	<ul id="dropdown1" class="dropdown-content">
-		<li><a href="/usuario">Usuários</a></li>
+		<li><a href="/usuarios">Usuários</a></li>
 		<li class="divider"></li>
-		<li><a href="/veiculo">Veículos</a></li>
+		<li><a href="/veiculos">Veículos</a></li>
 		<li class="divider"></li>
-		<li><a href="/motorista">Motoristas</a></li>
+		<li><a href="/motoristas">Motoristas</a></li>
 	</ul>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
