--- a/Veiculos/src/main/resources/templates/motoristas/motorista.html
+++ b/Veiculos/src/main/resources/templates/motoristas/motorista.html
@@ -25,18 +25,18 @@
 			</ul>
 			<ul id="nav-mobile" class="right hide-on-med-and-down">
 				<li><a class="btn waves-effect waves-light"
-					href="/cadastroMotorista">Cadastrar Motorista</a></li>
+					href="/gerente/cadastroMotorista">Cadastrar Motorista</a></li>
 			</ul>
 		</div>
 	</nav>
 
 	<!-- Dropdown Structure -->
 	<ul id="dropdown1" class="dropdown-content">
-		<li><a href="/usuario">Usuários</a></li>
+		<li><a href="/usuarios">Usuários</a></li>
 		<li class="divider"></li>
-		<li><a href="/veiculo">Veículos</a></li>
+		<li><a href="/veiculos">Veículos</a></li>
 		<li class="divider"></li>
-		<li><a href="/motorista">Motoristas</a></li>
+		<li><a href="/motoristas">Motoristas</a></li>
 	</ul>
 	<!-- Fim do Navbar -->
 
