--- a/Veiculos/src/main/resources/templates/usuarios/cadastroAdmin.html
+++ b/Veiculos/src/main/resources/templates/usuarios/cadastroAdmin.html
@@ -46,16 +46,16 @@
 					<div class="row">
 						<div class="input-field col s4">
 							<label>Nome:</label><input id="nome" type="text" value=""
-								name="Nome" />
+								name="Nome" th:field="*{nome}" />
 						</div>
 						<div class="row">
 							<div class="input-field col s3">
 								<label>Login:</label><input id="login" type="text" value=""
-									name="login" />
+									name="login" th:field="*{login}" />
 							</div>
 							<div class="input-field col s3">
 								<label>Senha:</label><input id="senha" type="password" value=""
-									name="senha" />
+									name="senha" th:field="*{senha}" />
 							</div>
 						</div>
 						<div class="input-field col s6">
