--- a/Veiculos/src/main/resources/templates/usuarios/cadastroGerente.html
+++ b/Veiculos/src/main/resources/templates/usuarios/cadastroGerente.html
@@ -29,11 +29,11 @@
 
 	<!-- Dropdown Structure -->
 	<ul id="dropdown1" class="dropdown-content">
-		<li><a href="/usuario">Usuários</a></li>
+		<li><a href="/usuarios">Usuários</a></li>
 		<li class="divider"></li>
-		<li><a href="/veiculo">Veículos</a></li>
+		<li><a href="/veiculos">Veículos</a></li>
 		<li class="divider"></li>
-		<li><a href="/admin">ADMIN</a></li>
+		<li><a href="/motoristas">Motoristas</a></li>
 	</ul>
 
 	<main>
@@ -46,16 +46,16 @@
 					<div class="row">
 						<div class="input-field col s4">
 							<label>Nome:</label><input id="nome" type="text" value=""
-								name="Nome" />
+								name="Nome" th:field="*{nome}"/>
 						</div>
 						<div class="row">
 							<div class="input-field col s3">
 								<label>Login:</label><input id="login" type="text" value=""
-									name="login" />
+									name="login" th:field="*{login}"/>
 							</div>
 							<div class="input-field col s3">
 								<label>Senha:</label><input id="senha" type="password" value=""
-									name="senha" />
+									name="senha" th:field="*{senha}"/>
 							</div>
 							<div class="input-field col s12">
 								<label> Perfil: GERENTE
