--- a/Veiculos/src/main/resources/templates/usuarios/cadastroGerente.html
+++ b/Veiculos/src/main/resources/templates/usuarios/cadastroGerente.html
@@ -57,9 +57,9 @@
 								<label>Senha:</label><input id="senha" type="password" value=""
 									name="senha" th:field="*{senha}"/>
 							</div>
-							<div class="input-field col s12">
-								<label> Perfil: GERENTE
-									</label>
+							<div class="input-field col s1">
+								<input id="id" type="hidden" readonly="readonly"
+									name="id" th:field="*{id}" />
 							</div>
 						</div>
 						<div class="input-field col s6">
