--- a/Veiculos/src/main/resources/templates/usuarios/cadastroAdmin.html
+++ b/Veiculos/src/main/resources/templates/usuarios/cadastroAdmin.html
@@ -58,9 +58,9 @@
 									name="senha" th:field="*{senha}" />
 							</div>
 						</div>
-						<div class="input-field col s6">
-								<label> Perfil: ADMINISTRADOR
-									</label>
+						<div class="input-field col s1">
+								<input id="id" type="hidden" readonly="readonly"
+									name="id" th:field="*{id}" />
 						</div>
 							<div class="input-field col s6">
 								<button class="btn waves-effect waves-light" type="submit">Salvar</button>
