criação da entidade servico, e exclusão do motoristacontroller

--- a/src/main/resources/templates/dashboard.html
+++ b/src/main/resources/templates/dashboard.html
@@ -32,7 +32,7 @@
 					role="menuitem"> Logout</a></li>
 			</ul>
 			<ul id="nav-mobile" class="right hide-on-med-and-down">
-				<li><a class="btn waves-effect waves-light" href="/serviço">Serviço</a></li>
+				<li><a class="btn waves-effect waves-light" href="/cadastrarServiço">Serviço</a></li>
 			</ul>
 		</div>
 	</nav>
