criado editar e excluir na tela de motorista e adicionado o JavaScript no acesso negado

--- a/src/main/resources/templates/usuarios/motorista.html
+++ b/src/main/resources/templates/usuarios/motorista.html
@@ -61,6 +61,10 @@
 						<td th:text=${usuario.nome}></td>
 						<td th:text=${usuario.tipoCNH}></td>
 						<td th:text=${usuario.ValidadeCNH}></td>
+						<td> <a th:href="@{/editarMotorista/{idusuario}(idusuario=${usuario.id})}">
+									Editar</a></td>
+						<td><a th:href="@{/removerusuario/{idusuario}(idusuario=${usuario.id})}">
+								Excluir</a></td>
 					</tr>
 				</tbody>
 				<th:block>
