--- a/src/main/resources/templates/erros/acesso-negado.html
+++ b/src/main/resources/templates/erros/acesso-negado.html
@@ -50,5 +50,12 @@
 		</div>
 	</main>
 
+
+	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+	<script
+		src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+	<script type="text/javascript">
+		$('.dropdown-trigger').dropdown();
+	</script>
 </body>
 </html>
