feito a listagem dos serviço e criação com erro

--- a/src/main/resources/templates/servicos/servico.html
+++ b/src/main/resources/templates/servicos/servico.html
@@ -15,13 +15,13 @@
 
 
 
-<title>Dashboard</title>
+<title>Serviço</title>
 </head>
 <body>
 	<!-- Navbar -->
 	<nav>
 		<div class="nav-wrapper">
-			<a href="#" class="brand-logo center">DashBoard</a>
+			<a href="#" class="brand-logo center">Serviços</a>
 			<ul id="nav-mobile" class="left hide-on-med-and-down">
 				<li><a href="/dashboard"> Dashboard</a></li>
 				<!-- Menu para os Administradores e Gerentes -->
@@ -32,7 +32,7 @@
 					role="menuitem"> Logout</a></li>
 			</ul>
 			<ul id="nav-mobile" class="right hide-on-med-and-down">
-				<li><a class="btn waves-effect waves-light" href="/servico">Serviço</a></li>
+				<li><a class="btn waves-effect waves-light" href="/cadastroServico">Cadastro de Serviço</a></li>
 			</ul>
 		</div>
 	</nav>
@@ -51,9 +51,28 @@
 		<li class="divider"></li>
 		<li><a href="/motoristas">Motoristas</a></li>
 	</ul>
+	
 	<main>
 		<div>
+			<table class="striped centered responsive-table container">
+				<thead>
+					<tr>
+						<th>Registro Veículo</th>
+						<th>Motorista</th>
+						<th>Distancia</th>
+						<th>Abastecimento</th>
+						<th>Data Inicial</th>
+						<th>Data Final</th>
+						<th>Consumo</th>
+						<th>Editar</th>
+						<th>Excluir</th>
+					</tr>
+				</thead  >
+				<tbody>
+				</tbody>
+			</table>
 		</div>
+
 	</main>
 
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
